add router outlet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,4 @@
   <li><a routerLink="admin/login">Login</a></li>
   <li><a routerLink="admin/list">List</a></li>
 </ul>
+<router-outlet></router-outlet>
