--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 <h2>User Links</h2>
 <ul>
   <li><a routerLink="user/login">Login</a></li>
-  <li><a routerLink="admin/list">List</a></li>
+  <li><a routerLink="user/list">List</a></li>
 </ul>
 
 <router-outlet></router-outlet>
